diesel_compile_tests/tests/compile-fail/select_for_update_cannot_be_used_on_sqlite.rs
#[macro_use]
extern crate diesel;

use diesel::*;
use diesel::sqlite::SqliteConnection;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    let conn = SqliteConnection::establish("").unwrap();
    users::table
        .for_update()
        .load(&conn)
        //~^ ERROR: E0277
        .unwrap();
}
